# vigilante-ai

./: .gitignore  NEXT_STEPS.md  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: alerts.py  camera.py  config.py  detector.py  main.py  observability.py  registry.py  repositories.py  schemas.py  security.py  sources.py  storage.py  stream.py
backend/app/auth/: dependencies.py  router.py  security.py
backend/app/db/: base.py  entities.py
backend/app/services/: alert_service.py  retraining_exporter.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_schema.py
backend/tests/: conftest.py  test_api.py  test_stream.py
frontend/: package-lock.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AddCameraDialog.tsx  AlertDetailsModal.tsx  AlertPanel.tsx  AppShell.tsx  CameraDetailDrawer.tsx  CameraPreviewCard.tsx  EPIPanel.tsx  Logo.tsx  MarketingShell.tsx  Sidebar.tsx
frontend/src/hooks/: useAlerts.ts  (+4 more)
media/: README.md
mediamtx/: mediamtx.yml
ml/: .gitignore  README.md  eval.py  export.py  requirements.txt  run_pipeline.sh  setup_local.sh  train.py  upload_hf.sh  upload_hf_public.sh
ml/active_learning/: label_studio_setup.md  sample_uncertain.py
ml/augment/: pipeline.py
ml/configs/: augment.yaml  ppe-cctv-v1.yaml
ml/prepare/: DATASETS.md  merge_datasets.py  roboflow_fetch.py  roboflow_urls.txt  voc_to_yolo.py
ml/scripts/: merge_feedback.sh
scripts/: ffmpeg-loop.sh  rtsp-control.sh  rtsp-ui.py  start-rtsp-ui.sh
(+11 files in other folders)
